--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,33 +36,33 @@
 	}
 
 	.dark {
-		--background: 240 10% 3.9%;
+		--background: 0, 0%, 11%;
 		--foreground: 0 0% 98%;
 
-		--card: 240 10% 3.9%;
+		--card: 0 0% 9%;
 		--card-foreground: 0 0% 98%;
 
-		--popover: 240 10% 3.9%;
+		--popover: 0 0% 11%;
 		--popover-foreground: 0 0% 98%;
 
-		--primary: 0 0% 98%;
-		--primary-foreground: 240 5.9% 10%;
+		--primary: 217.2 91.2% 59.8%;
+		--primary-foreground: 222.2 47.4% 11.2%;
 
-		--secondary: 240 3.7% 15.9%;
+		--secondary: 0 0% 14.9%;
 		--secondary-foreground: 0 0% 98%;
 
-		--muted: 240 3.7% 15.9%;
-		--muted-foreground: 240 5% 64.9%;
+		--muted: 0 0% 14%;
+		--muted-foreground: 0 0% 63.9%;
 
-		--accent: 240 3.7% 15.9%;
+		--accent: 0 0% 14.9%;
 		--accent-foreground: 0 0% 98%;
 
 		--destructive: 0 62.8% 30.6%;
 		--destructive-foreground: 0 0% 98%;
 
-		--border: 240 3.7% 15.9%;
-		--input: 240 3.7% 15.9%;
-		--ring: 240 4.9% 83.9%;
+		--border: 0 0% 20%;
+		--input: 0 0% 20%;
+		--ring: 0 0% 83.1%;
 	}
 }
 
