--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,7 @@
 		--popover: 0 0% 100%;
 		--popover-foreground: 240 10% 3.9%;
 
-		--primary: 188, 90%, 31%;
+		--primary: 207 83% 38%;
 		--primary-foreground: 0 0% 98%;
 
 		--secondary: 240 4.8% 95.9%;
@@ -45,7 +45,7 @@
 		--popover: 0 0% 11%;
 		--popover-foreground: 0 0% 98%;
 
-		--primary: 188, 90%, 40%;
+		--primary: 207 90% 58%;
 		--primary-foreground: 222.2 47.4% 11.2%;
 
 		--secondary: 0 0% 14.9%;
